# syn-ext

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: attribute.rs  generics.rs  ident.rs  item.rs  lib.rs  meta.rs  path.rs  punctuated.rs  shared.rs  test.rs  util.rs
